--- a/index.html
+++ b/index.html
@@ -530,14 +530,15 @@
     <!-- 英雄区 --> 
     <section class="hero"> 
         <div class="container">
-            <h1>TechShare 计算机学术分享平台</h1>
-            <p>~颖~的各种计算机学术分享平台，不论技术大小，基础复杂，以学习为主。</p>
+            
+            
             <div class="search-box"> 
                 <input type="text" class="search-input" id="searchInput" placeholder="搜索你感兴趣的关于计算机文章..."> 
                 <button class="search-btn" id="searchBtn"><i class="fas fa-search"></i></button> 
                 <i class="fas fa-times clear-btn" id="clearBtn"></i> 
             </div> 
         </div> 
+        <h1>计算机学术分享平台</h1>
     </section>
 
     <!-- 分类标签 --> 
